# skin-cancer-detection

./: .gitignore  README.md  app.py  pyproject.toml  requirements-template.txt  skincancer_detector.ipynb  train.py
src/: data_loader.py  model.py  preprocessing.py
